Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/NonStaticFieldExpr1.out
NonStaticFieldExpr1.java:10:30: compiler.err.non-static.cant.be.ref: kindname.variable, x
1 error
